# SvgWorkbench

./: README.md  fcbuild.py  package.xml  pyproject.toml
freecad/svgwb/: __init__.py  config.py  init_gui.py  preferences.py
freecad/svgwb/commands/: copy_svg.py  create_svg_file_object.py  export_svg.py  import_svg.py  paste_svg.py  sync_all.py
freecad/svgwb/features/: __init__.py  svg_action.py  svg_action_task.py  svg_file.py  svg_object.py  transformations.py
freecad/svgwb/plugins/: __init__.py  file_explorer.py
freecad/svgwb/resources/translations/: svgwb_de.ts  svgwb_en.ts  svgwb_es.qm  svgwb_es.ts  svgwb_fr.ts
freecad/svgwb/svg/: FaceTree.py  __init__.py  cache.py  circle.py  database.py  dimension.py  ellipse.py  export.py  face_tree.py  geom.py  group.py  index.py  line.py  object.py  options.py  parser.py  parsers.py  path.py  polyline.py  processor.py  rect.py  shape.py  style.py  text.py  use.py
freecad/svgwb/utils/: clipboard.py  topology.py
freecad/svgwb/workbenches/: svgwb.py
